--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependency_overrides:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/image/logo.jpg"
+  image_path: "assets/image/logo_copy.jpg"
 
 dev_dependencies:
 
