--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // id "dev.flutter.flutter-gradle-plugin"
+    id "dev.flutter.flutter-gradle-plugin"
     id "com.google.gms.google-services"
 }
 
@@ -30,7 +30,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "semicolon.qareeb.deliveryboy"
+    namespace "semicolon.qareb.tager"
     compileSdkVersion 34
     ndkVersion "25.1.8937393"
  
@@ -43,6 +43,7 @@ java {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
+ 
 
     kotlinOptions {
         jvmTarget = '17'
@@ -58,7 +59,7 @@ java {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "semicolon.qareeb.deliveryboy"
+        applicationId "semicolon.qareb.tager"
         minSdkVersion 21
         compileSdkVersion 34
         targetSdkVersion 34
@@ -66,6 +67,7 @@ java {
         versionName flutterVersionName
         multiDexEnabled true
     }
+    
 
     signingConfigs {
         release {
@@ -88,7 +90,10 @@ java {
 
 
 dependencies {
+    
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.firebase:firebase-messaging:21.0.1"
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     implementation(platform("com.google.firebase:firebase-bom:33.0.0"))
     implementation 'androidx.multidex:multidex:2.0.1'
