--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,19 @@
 buildscript {
-     ext.kotlin_version = '1.8.21'
+     ext.kotlin_version = '1.9.21'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.tools.build:gradle:8.0.0' // حسب نسخة gradle اللي بتستخدمها
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21'
-        classpath 'com.google.gms:google-services:4.3.15' // لو بتستخدم Firebase
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.21' // حسب نسخة kotlin اللي بتستخدمها
+        classpath 'com.google.gms:google-services:4.4.2' // لو بتستخدم Firebase
         // classpath 'com.android.tools.build:gradle:7.4.0'
         // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21"
     }
 }
+
 
 allprojects {
     repositories {
