--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,15 @@ publish_to: 'none'
 version: 1.2.0+3
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   audioplayers: ^5.2.1
   bluetooth_thermal_printer:
     path: C:/Users/moham/Downloads/BluetoothThermalPrinter-master/BluetoothThermalPrinter-master
   cached_network_image: ^3.3.0
-  connectivity: ^3.0.6
+  # connectivity: ^3.0.6
+  connectivity_plus: ^4.0.0
   country_code_picker: ^2.0.2
   cupertino_icons: ^1.0.2
   esc_pos_utils: ^1.1.0
@@ -19,10 +20,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   flutter:
     sdk: flutter
-  flutter_callkit_incoming:
-    git:
-      url: https://github.com/hiennguyen92/flutter_callkit_incoming
-      ref: 1.0.2+2
+  
   flutter_html: ^3.0.0-alpha.6
   flutter_launcher_icons: ^0.11.0
   flutter_local_notifications: ^13.0.0
@@ -48,16 +46,22 @@ dependencies:
   phone_number: ^1.0.0
   photo_view: ^0.14.0
   pin_code_fields: ^7.2.0
-  screenshot: ^2.3.0
+  screenshot: ^2.1.0
   shared_preferences: ^2.0.6
   shimmer_animation: ^2.0.0
+  flutter_callkit_incoming:
+    path: C:/Users/moham/Desktop/flutter_callkit_incoming-master
   url_launcher: ^6.1.2
   url_strategy: ^0.2.0
-  vibration: ^1.7.6
-  win32: ^3.1.3
+  vibration: ^2.1.0
+  win32: ^5.10.1
 
 dependency_overrides:
   modal_bottom_sheet: ^3.0.0-pre
+  country_code_picker: ^3.0.0 # فيه تحديث جديد متوافق مع material 3
+  pin_code_fields: ^8.0.0 # متوافق مع آخر إصدار Flutter
+  # screenshot: ^1.3.0
+
 
 flutter_icons:
   android: "launcher_icon"
